--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,40 +1,30 @@
-# -------------------------------
-# 1. Base image
-# -------------------------------
+# ---------- Base ----------
 FROM node:20-slim AS base
 WORKDIR /app
 
-# -------------------------------
-# 2. Install dependencies
-# -------------------------------
+# ---------- Install deps ----------
 FROM base AS deps
 COPY Frontend/package.json Frontend/package-lock.json ./
 RUN npm ci
 
-# -------------------------------
-# 3. Build Next.js app
-# -------------------------------
+# ---------- Build ----------
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY Frontend/ .
 RUN npm run build
 
-# -------------------------------
-# 4. Production runner
-# -------------------------------
+# ---------- Run ----------
 FROM node:20-slim AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
 ENV PORT=3000
 
-# Copy standalone build output
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 
-# Start Next.js server (IMPORTANT)
-CMD ["node", "server.js"]
+CMD ["node", ".next/standalone/server.js"]
