--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,30 +1,40 @@
-# ---------- Base ----------
+# -------------------------------
+# Base image
+# -------------------------------
 FROM node:20-slim AS base
 WORKDIR /app
 
-# ---------- Install deps ----------
+# -------------------------------
+# Dependencies
+# -------------------------------
 FROM base AS deps
 COPY Frontend/package.json Frontend/package-lock.json ./
 RUN npm ci
 
-# ---------- Build ----------
+# -------------------------------
+# Build
+# -------------------------------
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY Frontend/ .
 RUN npm run build
 
-# ---------- Run ----------
+# -------------------------------
+# Runner
+# -------------------------------
 FROM node:20-slim AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
 ENV PORT=3000
 
+# Copy standalone output
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
 
 EXPOSE 3000
 
+# ✅ IMPORTANT FIX HERE
 CMD ["node", ".next/standalone/server.js"]
