--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "Top-level scripts for the Campus Voice project.",
   "scripts": {
-    "build": "next build",
-    "start": "next start"
+    "start": "npm --prefix backend start",
+    "start:uvicorn": "C:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python314\\python.exe -m uvicorn backend.server:app --reload --app-dir . --host 127.0.0.1 --port 8000"
   },
   "dependencies": {
     "axios": "^1.13.2"
