--- a/render.yaml
+++ b/render.yaml
@@ -25,6 +25,9 @@ services:
     dockerfilePath: ./Dockerfile.frontend
     envVars:
       - key: NEXT_PUBLIC_API_URL
-        value: https://campus-voice-backend.onrender.com
+        fromService:
+          type: web
+          name: campus-voice-backend
+          property: url
       - key: NODE_ENV
         value: production
